HOMEPAGE: fixed footer color on mobile

--- a/src/documents/styles/modules/footer.css.less
+++ b/src/documents/styles/modules/footer.css.less
@@ -302,9 +302,6 @@
 			&.toronto, &.chicago, &.chernihiv, &.vancouver {
 				width: 100%;
 			}
-			span {
-				color: #7e7e7e;
-			}
 		}
 	}
 }
